smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-missing-namespace.smithy
// Parse error at line 6, column 5 near `smithy.api`: Invalid shape ID: smithy.api
$version: "1.0"

namespace smithy.example

use smithy.api
